--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start:": "node app.ts"
+    "start": "node app.ts"
   },
   "keywords": [],
   "author": "",
