--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/node": "^24.6.0"
+    "@types/node": "^24.6.0",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "express": "^5.1.0"
